fixed the spacing and number issue

--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ ul {
 
 
   .spacer {
-    height: 60px;
+    height: 100px;
     width: 100%;
   }
 
